--- a/main.html
+++ b/main.html
@@ -1,77 +1,49 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="eng">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="en">
 <head>
-    <title>Jobs at FreeCodeCamp</title>
-	  <link rel="stylesheet" href="styles.css" />
-  </head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Job Application Form</title>
+</head>
 <body>
-    <div class="register-wrapper">
-        <div class="register-block">
-            <h1 id="title" class="register-title">Job application</h1>
-            <p id="description">Fill the form below to finish your application for this position</p><hr>
-            <form id="survey-form" action="">
-            <fieldset>
-                <legend>Basic Info</legend>
-                <label id="name-label">Enter your name<input type="text" id="name" placeholder="Ophy Boamah" required></label>
-                <label id="email-label">Enter your email<input type="email" id="email" placeholder="ob@tutanota.com" required></label>
-                <label id="number-label">Age<span class="thin">(optional)</span><input id="number" type="number" min="16" max="80"></label>
-            </fieldset>
-            <fieldset>
-                <label>How did you hear about us?</label>
-                    <select id="dropdown">
-                        <option>(select one)</option>
-                        <option>friends and colleagues</option>
-                        <option>Social media</option>
-                        <option>Other</option>
-                    </select>
-                
-            </fieldset>
-           
-            <fieldset>
-                <legend>Skill Assessment</legend>
-                <label>Which of this fields are you familiar with ? <span class="thin">(Check all that apply)</span></label>
-                <label><input type="checkbox" value="1" />Front-end development</label>
-                <label><input type="checkbox" value="2" />Back-end devlopment</label>
-                <label><input type="checkbox" value="3" />Data Visualization</label>
-                <label><input type="checkbox" value="4" />QA testing</label>
-                <label><input type="checkbox" value="5" />Community managment</label>
-                <label><input type="checkbox" value="6" />Data analysis</label>
-                <label><input type="checkbox" value="7" />Artificial Intelligence</label>
-                <label><input type="checkbox" value="8" />Machine Learning</label>
-                <label><input type="checkbox" value="9" />Programming IoT devices</label>
-                <label><input type="checkbox" value="10" />Information security</label>
-                <label><input type="checkbox" value="11"/>Other</label>
-            </fieldset>
 
-            <fieldset>
-                <label>Why do you wanna join us? <span class="thin">(in 2-4 lines)</span>
-                    <textarea placeholder="  start typing.." rows='5'></textarea>
-                </label>
-            </fieldset>
+    <form action="#" method="post">
+        <label for="name">Name*</label>
+        <input type="text" id="name" name="name" required>
 
-            <fieldset>
-                <label> Would you like to join us ?</label>
-                <label><input type="radio" name="Join request" value="1" class="inline">Yes absolutely</label>
-                <label><input type="radio" name="Join request" value="2" class="inline">Let me think about it <a href="freecodecamp.org">(learn more)</a></label> 
-                <label>
-                    <input type="checkbox" value="12" name="terms" class="inline" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-	            </label>
-            </fieldset>
-            <fieldset>
-                <label>Upload your Curriculum below<span class="thin"> (keep it short)</span></label> 
-                    <label><input type="file"></label>
-                </label>
-            </fieldset>
-            <input type="submit" value="Submit" id="submit"/>
-            </form>
-        </div>
-    </div>
+        <label for="email">Email*</label>
+        <input type="email" id="email" name="email" required>
+
+        <label>Gender*</label>
+        <input type="radio" id="male" name="gender" value="male" required>
+        <label for="male">Male</label>
+        <input type="radio" id="female" name="gender" value="female" required>
+        <label for="female">Female</label>
+        <input type="radio" id="other" name="gender" value="other" required>
+        <label for="other">Other</label>
+
+        <label for="laptop">Laptop Brands</label>
+        <select id="laptop" name="laptop">
+            <option value="apple">Apple</option>
+            <option value="asus">Asus</option>
+            <option value="hp">HP</option>
+        </select>
+
+        <label for="age">Age*</label>
+        <input type="number" id="age" name="age" required>
+
+        <label for="dob">Date of Birth*</label>
+        <input type="date" id="dob" name="dob" required>
+
+        <label for="password">Password*</label>
+        <input type="password" id="password" name="password" required>
+
+        <label for="portfolio">Portfolio URL</label>
+        <input type="url" id="portfolio" name="portfolio">
+
+        <button type="submit">Submit</button>
+    </form>
+
 </body>
-<footer class="attribution register-wrapper">
-        A <a href="https://freecodecamp.org" target="_blank">FreeCodeCamp</a> Project<br> 
-        Coded by <a href="https://github.com/Mahdi-abd-rahmen-Madi">Mahdi Madi</a>.
-</footer>
 </html>
+
