--- a/main.html
+++ b/main.html
@@ -29,23 +29,23 @@
 	<br>
 	
 	<div>
-		<label for ="cars">Cars Brands</label>
-	    <select id="cars" name "cars" >
-		<option value ="MMW">BMW</option>
-		<option value ="Audi">Audi</option>
-		<option value ="Mercedez">Mercedez</option>
+		<label for ="cars">Laptop Brands</label>
+	    <select id="laptop" name "laptops" >
+		<option value ="Apple">Apples</option>
+		<option value ="Asus">Asus</option>
+		<option value ="HP">HP</option>
 		</select>
 		
 	</div>
 	<br>
 	<div>
-	<label for= "carage">Car Age</label>
-	<input type="text" name ="carage" id="carage"required>
+	<label for= "carage">Age</label>
+	<input type="number" name ="age" id="age"required>
 	</div>
 	<br>
 		<div>
-			<label for="dop">Date of Purchase</label>
-			<input type="date" name="dop"id="dop"required>
+			<label for="dob">Date of Birth</label>
+			<input type="date" name="dob"id="dob"required>
 		</div>
 		<br>
 <!-- 	<div>
