--- a/main.html
+++ b/main.html
@@ -58,6 +58,10 @@
   </div>
 
 	<br>
+		 <label for="portfolio">Portfolio URL</label>
+        <input type="url" id="portfolio" name="portfolio">
+	<br>
+		<br>
 	<button type ="submit">Submit</button>
 </form>
     <script type="text/javascript" src="./script.js">
