--- a/main.html
+++ b/main.html
@@ -8,12 +8,16 @@
 <body>
 
     <form action="#" method="post">
-
+<section>
         <label for="name">Name*</label>
         <input type="text" id="name" name="name" required>
-
+          </section>
+          <section>
+  
         <label for="email">Email*</label>
         <input type="email" id="email" name="email" required>
+          </section>
+          <section>
 
         <label>Gender*</label>
         <input type="radio" id="male" name="gender" value="male" required>
@@ -23,7 +27,10 @@
         <label for="female">Female</label>
 
         <input type="radio" id="other" name="gender" value="other" required>
+               
         <label for="other">Other</label>
+          </section>
+          
 
         <label for="laptop">Laptop Brands</label>
         <select id="laptop" name="laptop">
@@ -31,18 +38,27 @@
             <option value="asus">Asus</option>
             <option value="hp">HP</option>
         </select>
+          <section>
 
         <label for="age">Age*</label>
-        <input type="number" id="age" name="age" required>
+        <input type="number" id="age" name="age"
+               placeholder="Enter your age"required>
+          </section>
+          <section>
 
         <label for="dob">Date of Birth*</label>
         <input type="date" id="dob" name="dob" required>
+          </section>
+          <section>
 
         <label for="password">Password*</label>
         <input type="password" id="password" name="password" required>
+          </section>
+          <section>
 
         <label for="portfolio">Portfolio URL</label>
         <input type="url" id="portfolio" name="portfolio">
+          </section>
 
         <button type="submit">Submit</button>
 
