--- a/main.html
+++ b/main.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Application Form</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-
-    <form action="#" method="post">
-<section>
-        <label for="name">Name*</label>
-        <input type="text" id="name" name="name" required>
-          </section>
-          <section>
-  
-        <label for="email">Email*</label>
-        <input type="email" id="email" name="email" required>
-          </section>
-          <section>
-
-        <label>Gender*</label>
-        <input type="radio" id="male" name="gender" value="male" required>
-        <label for="male">Male</label>
-
-        <input type="radio" id="female" name="gender" value="female" required>
-        <label for="female">Female</label>
-
-        <input type="radio" id="other" name="gender" value="other" required>
-               
-        <label for="other">Other</label>
-          </section>
+<!-- the entire body must be written by student -->
+	<main>
+	 <form method="post">
+	  <section>
+		<label for="name">Name</label>
+		<input type="text" name="name" id="name" placeholder="Enter your name" required>
+	</section>
+	<section>
+		<label for="email">Email</label>
+		<input type="email" name="email" id="email" placeholder="Enter your email" required>
+	</section>
+	<section>
+		<label for="gender">Gender</label>
+		<label for="male" >Male</label>
+		<input type="radio" name="gender" id="male" required>
+		<label for="female">Female</label>
+		<input type="radio" name="gender" id="female" required>
+	</section>
+	<section>
+		<label for="laptop">Laptop Brands</label>
+		<select id="laptop" required>
+        <option value="apple">Apple</option>
+        <option value="asus">Asus</option>
+        <option value="apple">HP</option>
+<!--         <option value="apple">HP</option> -->
           
+		</select>
+	</section>
 
-        <label for="laptop">Laptop Brands</label>
-        <select id="laptop" name="laptop">
-            <option value="apple">Apple</option>
-            <option value="asus">Asus</option>
-            <option value="hp">HP</option>
-        </select>
-          <section>
 
-        <label for="age">Age*</label>
-        <input type="number" id="age" name="age"
-               placeholder="Enter your age"required>
-          </section>
-          <section>
+	<section>
+		<label for="age">Age</label>
+		<input type="number" name="age" id="age" placeholder="Enter your age" required>
+	</section>
 
-        <label for="dob">Date of Birth*</label>
-        <input type="date" id="dob" name="dob" required>
-          </section>
-          <section>
+	<section>
+		<label for="dob">DOB</label>
+		<input type="date" name="dob" id="dob" required>
+	</section>
 
-        <label for="password">Password*</label>
-        <input type="password" id="password" name="password" required>
-          </section>
-          <section>
+	<section>
+		<label for="password">Password</label>
+		<input type="password" name="passjword" id="password" placeholder="Enter your password" required>
+	</section>
 
-        <label for="portfolio">Portfolio URL</label>
-        <input type="url" id="portfolio" name="portfolio">
-          </section>
+	<section>
+		<button type="submit" >Submit</button>
+	</section>
+		 	<section>
+ <label for="portfolio">Portfolio</label>
+ <input type="url" name="portfolio" id="portfolio" placeholder="paste your portfolio link" required>
+	</section>
 
-        <button type="submit">Submit</button>
-
-    </form>
+	 </form>
+	</main>
+    <script type="text/javascript" src="./script.js">
+    </script>
 
 </body>
+
 </html>
